# sembr

./: .gitignore  LICENSE  LICENSE.txt  README.md  inference.py  pyproject.toml  requirements.txt  sb  sembr.py  setup.py  train.py
.github/workflows/: publish.yml
scripts/: train.py
sembr/: __init__.py  cli.py  databuilder.py  dataset.py  eval.py  inference.py  mcp.py  process.py  sembr2023.py  train.py  utils.py
sembr/data/: __init__.py  process.py  sembr2023.py
sembr/processors/: __init__.py  base.py  latex.py  markdown.py  plaintext.py  utils.py
tests/fixtures/: headers.md  horizontal_rules.md  indented_code.md  inline_formatting.md  links.md  mixed_lists.md  nested_quotes.md  tables.md  task_lists.md
