[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sembr"
dynamic = ["version"]
authors = [
  { name="admk" },
]
description = "A semantic linebreaker powered by transformers"
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.10"
dependencies = [
    "accelerate",
    "fastmcp",
    "flask",
    "mcp[cli]",
    "numpy",
    "pydantic",
    "requests",
    "torch",
    "tqdm",
    "transformers",
    "tree-sitter>=0.25.0",
    "tree-sitter-markdown>=0.3.2",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Environment :: Console",
]

[project.scripts]
sembr = "sembr.cli:main"

[project.urls]
Homepage = "https://github.com/admk/sembr"
Issues = "https://github.com/admk/sembr/issues"

[tool.setuptools.packages.find]
include = ["sembr"]
exclude = ["data*", "tests*"]

[tool.setuptools.dynamic]
version = {attr = "sembr.__version__"}
